Added fixed order for game icon display. No preferential treatment.